Definition of a web service for registering comments for an idea
