# routes/api.php
@@ -13,7 +13,7 @@ Route::get('/user', function (Request $request) {
 Route::prefix('/v1/app')->group(function () {
     Route::resource('/topics', TopicController::class);
     Route::resource('/idea', IdeaController::class);
-    Route::post('/idea/{idea}/comment', [IdeaCommentController::class, 'store'])
-    ->name('api.v1.app.idea.comment.store');
+    Route::post('/idea/{idea}/comment', [IdeaCommentController::class, 'store']);
+    Route::get('/idea/{idea}/comment', [IdeaCommentController::class, 'index']);
 
 });
